--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "@rollup/plugin-json": "^4.1.0",
         "@rollup/plugin-node-resolve": "^13.1.3",
         "@rollup/plugin-typescript": "^8.3.0",
+        "@types/dompurify": "^2.3.3",
         "@types/lodash": "^4.14.178",
         "@types/node": "^17.0.14",
         "@types/react": "^17.0.38",
@@ -76,5 +77,8 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "styled-components": "^5.3.3"
+    },
+    "dependencies": {
+        "dompurify": "^2.3.5"
     }
 }
